# lazy_dict

./: .gitignore  Allegro.md  README.md  logo.psd
lazy_dict/: capture.psd  help.psd  ic_launcher.psd  lazy_dict.jks  restart.psd  tv.psd  tv1.psd
lazy_dict/app/: build.gradle  proguard-rules.pro
lazy_dict/app/release/: MANIFEST.MF  classes.dex
lazy_dict/app/src/main/: AndroidManifest.xml  AndroidManifest2.xml  AndroidManifest_native_window.xml
lazy_dict/app/src/main/assets/: aip.license  loading.html
lazy_dict/app/src/main/res/drawable/: anim_dot.xml  anim_dot_slow.xml  bg_corner.xml  bg_status.xml  bg_toast.xml  btn_capture_selector.xml  btn_restart_selector.xml  dot_gray.xml  dot_red.xml  scan_line.xml  (+6 more)
lazy_dict/app/src/tmp/: Camera2BasicFragment.java  Camera2BasicFragment2.java
lib_layz_dict/: Allegro.md  Cargo.allegro.toml  Cargo.toml  Cargo_winit.toml  android.md  bitmap_surface.md  build.cmd  build_sdl2.md  demo.wasm  release.cmd  windows_ndk.md
lib_layz_dict/RustAllegro/allegro/: Cargo.toml
lib_layz_dict/RustAllegro/allegro-sys/src/: bitmap.rs
lib_layz_dict/RustAllegro/allegro/src/: core.rs  run.rs
lib_layz_dict/RustAllegro/allegro_font/src/: font.rs
lib_layz_dict/demo/: Cargo.toml  hello.wasm
lib_layz_dict/demo/src/: imgtools.rs  lib_.rs  main.2.rs  main.rs  retina.rs  tmp.rs
lib_layz_dict/glutin/: Cargo.toml
lib_layz_dict/glutin/src/: lib.rs
lib_layz_dict/glutin/src/api/android/: mod.rs
lib_layz_dict/glutin/src/api/egl/: mod.rs
lib_layz_dict/src/: ffi.rs  imgtool.rs  jni_graphics.rs  lib.rs  lib2.rs  lib_sdl.rs  lib_win.rs  native_activity.rs  native_window.rs  retina.rs  sdl_android.rs  support.rs  utils.rs
lib_layz_dict/src/android_glue/: native_window.rs
lib_layz_dict/src/temp/: Cargo.glue.toml  Cargo.sdl.toml
lib_layz_dict/temp/: lib.rs  lib_allegro.rs  lib_glue_test.rs  lib_old.rs  looper.rs  tmp.rs
lib_layz_dict/temp/android_glue/: mod.rs
(+43 files in other folders)
