[package]
name = "lazy_dict"
version = "0.1.0"
authors = ["planet"]

[dependencies]
libc = "*"
log = "*"
lazy_static = "1.1.0"
jni = { version = "*", default-features = false }
android_logger = "*"
android_support = "*"
zip = { version = "*", features = ["deflate-zlib"], default-features = false }
rayon = "1.0.2"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
#panic = 'abort'