[package]
name = "demo"
version = "0.1.0"
authors = ["Jia Ye <planet0104@gmail.com>"]


[dependencies]
# serde_json = "1.0.32"
# bincode = "1.0.1"
# jieba-rs = "0.2"
#image = "*"
#imageproc = "*"
#rand = "0.5.5"
base64 = "0.10.0"
# sha1 = "*"
# stdweb = "0.4.10"
# mp4parse = "0.10.1"
# ffmpeg = "*"
# mp4parse_capi = "0.10.1"
# gif = "0.10.1"
sha1 = "0.6.0"
flate2 = "1.0.5"
md5 = "0.6.0"